--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link rel="shortcut icon" href="./favicon.png?as=avif">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Silkscreen">
   <link rel="stylesheet" href="style.css" />
+  <link rel="canonical" href="https://fewkz.me" />
 </head>
 <body>
   <img
