Put image and caption in figure tag

--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
   <link rel="canonical" href="https://fewkz.me" />
 </head>
 <body>
-  <img
-    class="avatar"
-    src="fewkz.png?as=avif"
-    alt="my roblox avatar"
-  />
-  <figcaption class="avatar-caption">
-    drawing by
-    <a href="https://twitter.com/SayDaysREAL">SayDays</a>
-  </figcaption>
+  <figure>
+    <img
+      class="avatar"
+      src="fewkz.png?as=avif"
+      alt="my roblox avatar"
+    />
+    <figcaption class="avatar-caption">
+      drawing by
+      <a href="https://twitter.com/SayDaysREAL">SayDays</a>
+    </figcaption>
+  </figure>
   <div class="info">
     <h1>fewkz</h1>
     <p>hello, i'm fewkz. i'm an anti-social programmer and "game developer"</p>
