Add github link

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <div class="links">
       <a href="https://www.roblox.com/users/20405051/profile">Roblox</a>
       <a href="https://twitter.com/fewkz">Twitter</a>
+      <a href="https://github.com/fewkz">GitHub</a>
     </div>
   </div>
 </body>
